// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TabList /> snapshot should match snapshot 1`] = `
<TabList>
  <ButtonGroup
    className="md-tab-list-wrapper"
    data-has-background={false}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tablist"
    round={true}
    spaced={true}
  >
    <div
      className="md-button-group-wrapper md-tab-list-wrapper"
      data-compressed={false}
      data-has-background={false}
      data-orientation="horizontal"
      data-round={true}
      data-separator={false}
      data-spaced={true}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="tablist"
    >
      <Tab
        active={true}
        key="tab-1"
        onPress={[Function]}
        role="tab"
        tabIndex={0}
      >
        <ButtonSimple
          className="md-tab-wrapper"
          data-active={true}
          data-disabled={false}
          onPress={[Function]}
          role="tab"
          tabIndex={0}
        >
          <FocusRing>
            <FocusRing
              focusClass="md-focus-ring-wrapper children"
              focusRingClass="md-focus-ring-wrapper children"
            >
              <button
                className="md-tab-wrapper md-button-simple-wrapper"
                data-active={true}
                data-disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                type="button"
              >
                <PrimitiveConverter
                  fontStyle="subheader-secondary"
                  tagName="span"
                >
                  <Text
                    tagName="span"
                    type="subheader-secondary"
                  >
                    <span
                      className="md-text-wrapper"
                      data-type="subheader-secondary"
                    >
                      Tab 1
                    </span>
                  </Text>
                </PrimitiveConverter>
              </button>
            </FocusRing>
          </FocusRing>
        </ButtonSimple>
      </Tab>
      <Tab
        active={false}
        key="tab-2"
        onPress={[Function]}
        role="tab"
        tabIndex={-1}
      >
        <ButtonSimple
          className="md-tab-wrapper"
          data-active={false}
          data-disabled={false}
          onPress={[Function]}
          role="tab"
          tabIndex={-1}
        >
          <FocusRing>
            <FocusRing
              focusClass="md-focus-ring-wrapper children"
              focusRingClass="md-focus-ring-wrapper children"
            >
              <button
                className="md-tab-wrapper md-button-simple-wrapper"
                data-active={false}
                data-disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex={-1}
                type="button"
              >
                <PrimitiveConverter
                  fontStyle="subheader-secondary"
                  tagName="span"
                >
                  <Text
                    tagName="span"
                    type="subheader-secondary"
                  >
                    <span
                      className="md-text-wrapper"
                      data-type="subheader-secondary"
                    >
                      Tab 2
                    </span>
                  </Text>
                </PrimitiveConverter>
              </button>
            </FocusRing>
          </FocusRing>
        </ButtonSimple>
      </Tab>
      <Tab
        active={false}
        key="tab-3"
        onPress={[Function]}
        role="tab"
        tabIndex={-1}
      >
        <ButtonSimple
          className="md-tab-wrapper"
          data-active={false}
          data-disabled={false}
          onPress={[Function]}
          role="tab"
          tabIndex={-1}
        >
          <FocusRing>
            <FocusRing
              focusClass="md-focus-ring-wrapper children"
              focusRingClass="md-focus-ring-wrapper children"
            >
              <button
                className="md-tab-wrapper md-button-simple-wrapper"
                data-active={false}
                data-disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex={-1}
                type="button"
              >
                <PrimitiveConverter
                  fontStyle="subheader-secondary"
                  tagName="span"
                >
                  <Text
                    tagName="span"
                    type="subheader-secondary"
                  >
                    <span
                      className="md-text-wrapper"
                      data-type="subheader-secondary"
                    >
                      Tab 3
                    </span>
                  </Text>
                </PrimitiveConverter>
              </button>
            </FocusRing>
          </FocusRing>
        </ButtonSimple>
      </Tab>
    </div>
  </ButtonGroup>
</TabList>
`;

exports[`<TabList /> snapshot should match snapshot with className 1`] = `
<TabList
  className="example-class"
>
  <ButtonGroup
    className="md-tab-list-wrapper example-class"
    data-has-background={false}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tablist"
    round={true}
    spaced={true}
  >
    <div
      className="md-button-group-wrapper md-tab-list-wrapper example-class"
      data-compressed={false}
      data-has-background={false}
      data-orientation="horizontal"
      data-round={true}
      data-separator={false}
      data-spaced={true}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="tablist"
    >
      <Tab
        active={true}
        key="tab-1"
        onPress={[Function]}
        role="tab"
        tabIndex={0}
      >
        <ButtonSimple
          className="md-tab-wrapper"
          data-active={true}
          data-disabled={false}
          onPress={[Function]}
          role="tab"
          tabIndex={0}
        >
          <FocusRing>
            <FocusRing
              focusClass="md-focus-ring-wrapper children"
              focusRingClass="md-focus-ring-wrapper children"
            >
              <button
                className="md-tab-wrapper md-button-simple-wrapper"
                data-active={true}
                data-disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                type="button"
              >
                <PrimitiveConverter
                  fontStyle="subheader-secondary"
                  tagName="span"
                >
                  <Text
                    tagName="span"
                    type="subheader-secondary"
                  >
                    <span
                      className="md-text-wrapper"
                      data-type="subheader-secondary"
                    >
                      Tab 1
                    </span>
                  </Text>
                </PrimitiveConverter>
              </button>
            </FocusRing>
          </FocusRing>
        </ButtonSimple>
      </Tab>
      <Tab
        active={false}
        key="tab-2"
        onPress={[Function]}
        role="tab"
        tabIndex={-1}
      >
        <ButtonSimple
          className="md-tab-wrapper"
          data-active={false}
          data-disabled={false}
          onPress={[Function]}
          role="tab"
          tabIndex={-1}
        >
          <FocusRing>
            <FocusRing
              focusClass="md-focus-ring-wrapper children"
              focusRingClass="md-focus-ring-wrapper children"
            >
              <button
                className="md-tab-wrapper md-button-simple-wrapper"
                data-active={false}
                data-disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex={-1}
                type="button"
              >
                <PrimitiveConverter
                  fontStyle="subheader-secondary"
                  tagName="span"
                >
                  <Text
                    tagName="span"
                    type="subheader-secondary"
                  >
                    <span
                      className="md-text-wrapper"
                      data-type="subheader-secondary"
                    >
                      Tab 2
                    </span>
                  </Text>
                </PrimitiveConverter>
              </button>
            </FocusRing>
          </FocusRing>
        </ButtonSimple>
      </Tab>
      <Tab
        active={false}
        key="tab-3"
        onPress={[Function]}
        role="tab"
        tabIndex={-1}
      >
        <ButtonSimple
          className="md-tab-wrapper"
          data-active={false}
          data-disabled={false}
          onPress={[Function]}
          role="tab"
          tabIndex={-1}
        >
          <FocusRing>
            <FocusRing
              focusClass="md-focus-ring-wrapper children"
              focusRingClass="md-focus-ring-wrapper children"
            >
              <button
                className="md-tab-wrapper md-button-simple-wrapper"
                data-active={false}
                data-disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex={-1}
                type="button"
              >
                <PrimitiveConverter
                  fontStyle="subheader-secondary"
                  tagName="span"
                >
                  <Text
                    tagName="span"
                    type="subheader-secondary"
                  >
                    <span
                      className="md-text-wrapper"
                      data-type="subheader-secondary"
                    >
                      Tab 3
                    </span>
                  </Text>
                </PrimitiveConverter>
              </button>
            </FocusRing>
          </FocusRing>
        </ButtonSimple>
      </Tab>
    </div>
  </ButtonGroup>
</TabList>
`;

exports[`<TabList /> snapshot should match snapshot with hasBackground = true 1`] = `
<TabList
  hasBackground={true}
>
  <ButtonGroup
    className="md-tab-list-wrapper"
    data-has-background={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tablist"
    round={true}
    spaced={true}
  >
    <div
      className="md-button-group-wrapper md-tab-list-wrapper"
      data-compressed={false}
      data-has-background={true}
      data-orientation="horizontal"
      data-round={true}
      data-separator={false}
      data-spaced={true}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="tablist"
    >
      <Tab
        active={true}
        key="tab-1"
        onPress={[Function]}
        role="tab"
        tabIndex={0}
      >
        <ButtonSimple
          className="md-tab-wrapper"
          data-active={true}
          data-disabled={false}
          onPress={[Function]}
          role="tab"
          tabIndex={0}
        >
          <FocusRing>
            <FocusRing
              focusClass="md-focus-ring-wrapper children"
              focusRingClass="md-focus-ring-wrapper children"
            >
              <button
                className="md-tab-wrapper md-button-simple-wrapper"
                data-active={true}
                data-disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                type="button"
              >
                <PrimitiveConverter
                  fontStyle="subheader-secondary"
                  tagName="span"
                >
                  <Text
                    tagName="span"
                    type="subheader-secondary"
                  >
                    <span
                      className="md-text-wrapper"
                      data-type="subheader-secondary"
                    >
                      Tab 1
                    </span>
                  </Text>
                </PrimitiveConverter>
              </button>
            </FocusRing>
          </FocusRing>
        </ButtonSimple>
      </Tab>
      <Tab
        active={false}
        key="tab-2"
        onPress={[Function]}
        role="tab"
        tabIndex={-1}
      >
        <ButtonSimple
          className="md-tab-wrapper"
          data-active={false}
          data-disabled={false}
          onPress={[Function]}
          role="tab"
          tabIndex={-1}
        >
          <FocusRing>
            <FocusRing
              focusClass="md-focus-ring-wrapper children"
              focusRingClass="md-focus-ring-wrapper children"
            >
              <button
                className="md-tab-wrapper md-button-simple-wrapper"
                data-active={false}
                data-disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex={-1}
                type="button"
              >
                <PrimitiveConverter
                  fontStyle="subheader-secondary"
                  tagName="span"
                >
                  <Text
                    tagName="span"
                    type="subheader-secondary"
                  >
                    <span
                      className="md-text-wrapper"
                      data-type="subheader-secondary"
                    >
                      Tab 2
                    </span>
                  </Text>
                </PrimitiveConverter>
              </button>
            </FocusRing>
          </FocusRing>
        </ButtonSimple>
      </Tab>
      <Tab
        active={false}
        key="tab-3"
        onPress={[Function]}
        role="tab"
        tabIndex={-1}
      >
        <ButtonSimple
          className="md-tab-wrapper"
          data-active={false}
          data-disabled={false}
          onPress={[Function]}
          role="tab"
          tabIndex={-1}
        >
          <FocusRing>
            <FocusRing
              focusClass="md-focus-ring-wrapper children"
              focusRingClass="md-focus-ring-wrapper children"
            >
              <button
                className="md-tab-wrapper md-button-simple-wrapper"
                data-active={false}
                data-disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex={-1}
                type="button"
              >
                <PrimitiveConverter
                  fontStyle="subheader-secondary"
                  tagName="span"
                >
                  <Text
                    tagName="span"
                    type="subheader-secondary"
                  >
                    <span
                      className="md-text-wrapper"
                      data-type="subheader-secondary"
                    >
                      Tab 3
                    </span>
                  </Text>
                </PrimitiveConverter>
              </button>
            </FocusRing>
          </FocusRing>
        </ButtonSimple>
      </Tab>
    </div>
  </ButtonGroup>
</TabList>
`;

exports[`<TabList /> snapshot should match snapshot with id 1`] = `
<TabList
  id="example-id"
>
  <ButtonGroup
    className="md-tab-list-wrapper"
    data-has-background={false}
    id="example-id"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tablist"
    round={true}
    spaced={true}
  >
    <div
      className="md-button-group-wrapper md-tab-list-wrapper"
      data-compressed={false}
      data-has-background={false}
      data-orientation="horizontal"
      data-round={true}
      data-separator={false}
      data-spaced={true}
      id="example-id"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="tablist"
    >
      <Tab
        active={true}
        key="tab-1"
        onPress={[Function]}
        role="tab"
        tabIndex={0}
      >
        <ButtonSimple
          className="md-tab-wrapper"
          data-active={true}
          data-disabled={false}
          onPress={[Function]}
          role="tab"
          tabIndex={0}
        >
          <FocusRing>
            <FocusRing
              focusClass="md-focus-ring-wrapper children"
              focusRingClass="md-focus-ring-wrapper children"
            >
              <button
                className="md-tab-wrapper md-button-simple-wrapper"
                data-active={true}
                data-disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                type="button"
              >
                <PrimitiveConverter
                  fontStyle="subheader-secondary"
                  tagName="span"
                >
                  <Text
                    tagName="span"
                    type="subheader-secondary"
                  >
                    <span
                      className="md-text-wrapper"
                      data-type="subheader-secondary"
                    >
                      Tab 1
                    </span>
                  </Text>
                </PrimitiveConverter>
              </button>
            </FocusRing>
          </FocusRing>
        </ButtonSimple>
      </Tab>
      <Tab
        active={false}
        key="tab-2"
        onPress={[Function]}
        role="tab"
        tabIndex={-1}
      >
        <ButtonSimple
          className="md-tab-wrapper"
          data-active={false}
          data-disabled={false}
          onPress={[Function]}
          role="tab"
          tabIndex={-1}
        >
          <FocusRing>
            <FocusRing
              focusClass="md-focus-ring-wrapper children"
              focusRingClass="md-focus-ring-wrapper children"
            >
              <button
                className="md-tab-wrapper md-button-simple-wrapper"
                data-active={false}
                data-disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex={-1}
                type="button"
              >
                <PrimitiveConverter
                  fontStyle="subheader-secondary"
                  tagName="span"
                >
                  <Text
                    tagName="span"
                    type="subheader-secondary"
                  >
                    <span
                      className="md-text-wrapper"
                      data-type="subheader-secondary"
                    >
                      Tab 2
                    </span>
                  </Text>
                </PrimitiveConverter>
              </button>
            </FocusRing>
          </FocusRing>
        </ButtonSimple>
      </Tab>
      <Tab
        active={false}
        key="tab-3"
        onPress={[Function]}
        role="tab"
        tabIndex={-1}
      >
        <ButtonSimple
          className="md-tab-wrapper"
          data-active={false}
          data-disabled={false}
          onPress={[Function]}
          role="tab"
          tabIndex={-1}
        >
          <FocusRing>
            <FocusRing
              focusClass="md-focus-ring-wrapper children"
              focusRingClass="md-focus-ring-wrapper children"
            >
              <button
                className="md-tab-wrapper md-button-simple-wrapper"
                data-active={false}
                data-disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex={-1}
                type="button"
              >
                <PrimitiveConverter
                  fontStyle="subheader-secondary"
                  tagName="span"
                >
                  <Text
                    tagName="span"
                    type="subheader-secondary"
                  >
                    <span
                      className="md-text-wrapper"
                      data-type="subheader-secondary"
                    >
                      Tab 3
                    </span>
                  </Text>
                </PrimitiveConverter>
              </button>
            </FocusRing>
          </FocusRing>
        </ButtonSimple>
      </Tab>
    </div>
  </ButtonGroup>
</TabList>
`;

exports[`<TabList /> snapshot should match snapshot with style 1`] = `
<TabList
  style={
    {
      "color": "pink",
    }
  }
>
  <ButtonGroup
    className="md-tab-list-wrapper"
    data-has-background={false}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tablist"
    round={true}
    spaced={true}
    style={
      {
        "color": "pink",
      }
    }
  >
    <div
      className="md-button-group-wrapper md-tab-list-wrapper"
      data-compressed={false}
      data-has-background={false}
      data-orientation="horizontal"
      data-round={true}
      data-separator={false}
      data-spaced={true}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="tablist"
      style={
        {
          "color": "pink",
        }
      }
    >
      <Tab
        active={true}
        key="tab-1"
        onPress={[Function]}
        role="tab"
        tabIndex={0}
      >
        <ButtonSimple
          className="md-tab-wrapper"
          data-active={true}
          data-disabled={false}
          onPress={[Function]}
          role="tab"
          tabIndex={0}
        >
          <FocusRing>
            <FocusRing
              focusClass="md-focus-ring-wrapper children"
              focusRingClass="md-focus-ring-wrapper children"
            >
              <button
                className="md-tab-wrapper md-button-simple-wrapper"
                data-active={true}
                data-disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                type="button"
              >
                <PrimitiveConverter
                  fontStyle="subheader-secondary"
                  tagName="span"
                >
                  <Text
                    tagName="span"
                    type="subheader-secondary"
                  >
                    <span
                      className="md-text-wrapper"
                      data-type="subheader-secondary"
                    >
                      Tab 1
                    </span>
                  </Text>
                </PrimitiveConverter>
              </button>
            </FocusRing>
          </FocusRing>
        </ButtonSimple>
      </Tab>
      <Tab
        active={false}
        key="tab-2"
        onPress={[Function]}
        role="tab"
        tabIndex={-1}
      >
        <ButtonSimple
          className="md-tab-wrapper"
          data-active={false}
          data-disabled={false}
          onPress={[Function]}
          role="tab"
          tabIndex={-1}
        >
          <FocusRing>
            <FocusRing
              focusClass="md-focus-ring-wrapper children"
              focusRingClass="md-focus-ring-wrapper children"
            >
              <button
                className="md-tab-wrapper md-button-simple-wrapper"
                data-active={false}
                data-disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex={-1}
                type="button"
              >
                <PrimitiveConverter
                  fontStyle="subheader-secondary"
                  tagName="span"
                >
                  <Text
                    tagName="span"
                    type="subheader-secondary"
                  >
                    <span
                      className="md-text-wrapper"
                      data-type="subheader-secondary"
                    >
                      Tab 2
                    </span>
                  </Text>
                </PrimitiveConverter>
              </button>
            </FocusRing>
          </FocusRing>
        </ButtonSimple>
      </Tab>
      <Tab
        active={false}
        key="tab-3"
        onPress={[Function]}
        role="tab"
        tabIndex={-1}
      >
        <ButtonSimple
          className="md-tab-wrapper"
          data-active={false}
          data-disabled={false}
          onPress={[Function]}
          role="tab"
          tabIndex={-1}
        >
          <FocusRing>
            <FocusRing
              focusClass="md-focus-ring-wrapper children"
              focusRingClass="md-focus-ring-wrapper children"
            >
              <button
                className="md-tab-wrapper md-button-simple-wrapper"
                data-active={false}
                data-disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex={-1}
                type="button"
              >
                <PrimitiveConverter
                  fontStyle="subheader-secondary"
                  tagName="span"
                >
                  <Text
                    tagName="span"
                    type="subheader-secondary"
                  >
                    <span
                      className="md-text-wrapper"
                      data-type="subheader-secondary"
                    >
                      Tab 3
                    </span>
                  </Text>
                </PrimitiveConverter>
              </button>
            </FocusRing>
          </FocusRing>
        </ButtonSimple>
      </Tab>
    </div>
  </ButtonGroup>
</TabList>
`;

exports[`<TabList /> within <TabsProvider /> snapshot matches snapshot 1`] = `
<Component>
  <TabsProvider
    id="TestComponent"
    selectedTab="tab-1"
  >
    <TabList
      onTabSelection={[Function]}
    >
      <ButtonGroup
        className="md-tab-list-wrapper"
        data-has-background={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="tablist"
        round={true}
        spaced={true}
      >
        <div
          className="md-button-group-wrapper md-tab-list-wrapper"
          data-compressed={false}
          data-has-background={false}
          data-orientation="horizontal"
          data-round={true}
          data-separator={false}
          data-spaced={true}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="tablist"
        >
          <Tab
            active={true}
            aria-controls="TestComponenttab-1-TabPanel"
            aria-selected={true}
            id="TestComponenttab-1"
            key="tab-1"
            onPress={[Function]}
            role="tab"
            tabIndex={0}
          >
            <ButtonSimple
              aria-controls="TestComponenttab-1-TabPanel"
              aria-selected={true}
              className="md-tab-wrapper"
              data-active={true}
              data-disabled={false}
              id="TestComponenttab-1"
              onPress={[Function]}
              role="tab"
              tabIndex={0}
            >
              <FocusRing>
                <FocusRing
                  focusClass="md-focus-ring-wrapper children"
                  focusRingClass="md-focus-ring-wrapper children"
                >
                  <button
                    aria-controls="TestComponenttab-1-TabPanel"
                    aria-selected={true}
                    className="md-tab-wrapper md-button-simple-wrapper"
                    data-active={true}
                    data-disabled={false}
                    id="TestComponenttab-1"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragStart={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchCancel={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="tab"
                    type="button"
                  >
                    <PrimitiveConverter
                      fontStyle="subheader-secondary"
                      tagName="span"
                    >
                      <Text
                        tagName="span"
                        type="subheader-secondary"
                      >
                        <span
                          className="md-text-wrapper"
                          data-type="subheader-secondary"
                        >
                          Tab 1
                        </span>
                      </Text>
                    </PrimitiveConverter>
                  </button>
                </FocusRing>
              </FocusRing>
            </ButtonSimple>
          </Tab>
          <Tab
            active={false}
            aria-selected={false}
            id="TestComponenttab-2"
            key="tab-2"
            onPress={[Function]}
            role="tab"
            tabIndex={-1}
          >
            <ButtonSimple
              aria-selected={false}
              className="md-tab-wrapper"
              data-active={false}
              data-disabled={false}
              id="TestComponenttab-2"
              onPress={[Function]}
              role="tab"
              tabIndex={-1}
            >
              <FocusRing>
                <FocusRing
                  focusClass="md-focus-ring-wrapper children"
                  focusRingClass="md-focus-ring-wrapper children"
                >
                  <button
                    aria-selected={false}
                    className="md-tab-wrapper md-button-simple-wrapper"
                    data-active={false}
                    data-disabled={false}
                    id="TestComponenttab-2"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragStart={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchCancel={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="tab"
                    tabIndex={-1}
                    type="button"
                  >
                    <PrimitiveConverter
                      fontStyle="subheader-secondary"
                      tagName="span"
                    >
                      <Text
                        tagName="span"
                        type="subheader-secondary"
                      >
                        <span
                          className="md-text-wrapper"
                          data-type="subheader-secondary"
                        >
                          Tab 2
                        </span>
                      </Text>
                    </PrimitiveConverter>
                  </button>
                </FocusRing>
              </FocusRing>
            </ButtonSimple>
          </Tab>
          <Tab
            active={false}
            aria-selected={false}
            id="TestComponenttab-3"
            key="tab-3"
            onPress={[Function]}
            role="tab"
            tabIndex={-1}
          >
            <ButtonSimple
              aria-selected={false}
              className="md-tab-wrapper"
              data-active={false}
              data-disabled={false}
              id="TestComponenttab-3"
              onPress={[Function]}
              role="tab"
              tabIndex={-1}
            >
              <FocusRing>
                <FocusRing
                  focusClass="md-focus-ring-wrapper children"
                  focusRingClass="md-focus-ring-wrapper children"
                >
                  <button
                    aria-selected={false}
                    className="md-tab-wrapper md-button-simple-wrapper"
                    data-active={false}
                    data-disabled={false}
                    id="TestComponenttab-3"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragStart={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchCancel={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="tab"
                    tabIndex={-1}
                    type="button"
                  >
                    <PrimitiveConverter
                      fontStyle="subheader-secondary"
                      tagName="span"
                    >
                      <Text
                        tagName="span"
                        type="subheader-secondary"
                      >
                        <span
                          className="md-text-wrapper"
                          data-type="subheader-secondary"
                        >
                          Tab 3
                        </span>
                      </Text>
                    </PrimitiveConverter>
                  </button>
                </FocusRing>
              </FocusRing>
            </ButtonSimple>
          </Tab>
        </div>
      </ButtonGroup>
    </TabList>
  </TabsProvider>
</Component>
`;

exports[`<TabList /> within <TabsProvider /> snapshot matches snapshot when defining the selected tab 1`] = `
<Component
  defaultSelectedTab="tab-2"
>
  <TabsProvider
    id="TestComponent"
    selectedTab="tab-2"
  >
    <TabList
      onTabSelection={[Function]}
    >
      <ButtonGroup
        className="md-tab-list-wrapper"
        data-has-background={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="tablist"
        round={true}
        spaced={true}
      >
        <div
          className="md-button-group-wrapper md-tab-list-wrapper"
          data-compressed={false}
          data-has-background={false}
          data-orientation="horizontal"
          data-round={true}
          data-separator={false}
          data-spaced={true}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="tablist"
        >
          <Tab
            active={false}
            aria-selected={false}
            id="TestComponenttab-1"
            key="tab-1"
            onPress={[Function]}
            role="tab"
            tabIndex={-1}
          >
            <ButtonSimple
              aria-selected={false}
              className="md-tab-wrapper"
              data-active={false}
              data-disabled={false}
              id="TestComponenttab-1"
              onPress={[Function]}
              role="tab"
              tabIndex={-1}
            >
              <FocusRing>
                <FocusRing
                  focusClass="md-focus-ring-wrapper children"
                  focusRingClass="md-focus-ring-wrapper children"
                >
                  <button
                    aria-selected={false}
                    className="md-tab-wrapper md-button-simple-wrapper"
                    data-active={false}
                    data-disabled={false}
                    id="TestComponenttab-1"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragStart={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchCancel={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="tab"
                    tabIndex={-1}
                    type="button"
                  >
                    <PrimitiveConverter
                      fontStyle="subheader-secondary"
                      tagName="span"
                    >
                      <Text
                        tagName="span"
                        type="subheader-secondary"
                      >
                        <span
                          className="md-text-wrapper"
                          data-type="subheader-secondary"
                        >
                          Tab 1
                        </span>
                      </Text>
                    </PrimitiveConverter>
                  </button>
                </FocusRing>
              </FocusRing>
            </ButtonSimple>
          </Tab>
          <Tab
            active={true}
            aria-controls="TestComponenttab-2-TabPanel"
            aria-selected={true}
            id="TestComponenttab-2"
            key="tab-2"
            onPress={[Function]}
            role="tab"
            tabIndex={0}
          >
            <ButtonSimple
              aria-controls="TestComponenttab-2-TabPanel"
              aria-selected={true}
              className="md-tab-wrapper"
              data-active={true}
              data-disabled={false}
              id="TestComponenttab-2"
              onPress={[Function]}
              role="tab"
              tabIndex={0}
            >
              <FocusRing>
                <FocusRing
                  focusClass="md-focus-ring-wrapper children"
                  focusRingClass="md-focus-ring-wrapper children"
                >
                  <button
                    aria-controls="TestComponenttab-2-TabPanel"
                    aria-selected={true}
                    className="md-tab-wrapper md-button-simple-wrapper"
                    data-active={true}
                    data-disabled={false}
                    id="TestComponenttab-2"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragStart={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchCancel={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="tab"
                    type="button"
                  >
                    <PrimitiveConverter
                      fontStyle="subheader-secondary"
                      tagName="span"
                    >
                      <Text
                        tagName="span"
                        type="subheader-secondary"
                      >
                        <span
                          className="md-text-wrapper"
                          data-type="subheader-secondary"
                        >
                          Tab 2
                        </span>
                      </Text>
                    </PrimitiveConverter>
                  </button>
                </FocusRing>
              </FocusRing>
            </ButtonSimple>
          </Tab>
          <Tab
            active={false}
            aria-selected={false}
            id="TestComponenttab-3"
            key="tab-3"
            onPress={[Function]}
            role="tab"
            tabIndex={-1}
          >
            <ButtonSimple
              aria-selected={false}
              className="md-tab-wrapper"
              data-active={false}
              data-disabled={false}
              id="TestComponenttab-3"
              onPress={[Function]}
              role="tab"
              tabIndex={-1}
            >
              <FocusRing>
                <FocusRing
                  focusClass="md-focus-ring-wrapper children"
                  focusRingClass="md-focus-ring-wrapper children"
                >
                  <button
                    aria-selected={false}
                    className="md-tab-wrapper md-button-simple-wrapper"
                    data-active={false}
                    data-disabled={false}
                    id="TestComponenttab-3"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragStart={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchCancel={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="tab"
                    tabIndex={-1}
                    type="button"
                  >
                    <PrimitiveConverter
                      fontStyle="subheader-secondary"
                      tagName="span"
                    >
                      <Text
                        tagName="span"
                        type="subheader-secondary"
                      >
                        <span
                          className="md-text-wrapper"
                          data-type="subheader-secondary"
                        >
                          Tab 3
                        </span>
                      </Text>
                    </PrimitiveConverter>
                  </button>
                </FocusRing>
              </FocusRing>
            </ButtonSimple>
          </Tab>
        </div>
      </ButtonGroup>
    </TabList>
  </TabsProvider>
</Component>
`;
